feat: implement posthog analytics
